--- a/online_stores_and_the_like/product_gallery/index.css
+++ b/online_stores_and_the_like/product_gallery/index.css
@@ -1,32 +1,37 @@
-.container {
+.gallery_container {
     position: relative;
     width: 70%;
     overflow: hidden;
     margin: 5% auto;
-    padding: 0.5% 3% 10% 0.5%;
+    padding: 0 2% 11% 2%;
 }
 
+/* Tape */
 .container_vegetables {
+    font-size: 0;
     transition: 2s linear;
     width: 100%;
     white-space: nowrap;
 }
 
+/* Cards */
 .vegetable {
+    font: 14px Arial, sans-serif;
     position: relative;
     display: inline-block;
     width: 25%;
     white-space: initial;
-    /*transform: translateX(-6px);*/
 }
 
-.img_container {
+.vegetable div.img_container,
+.vegetable label.img_container {
     display: block;
     position: relative;
     padding-bottom: 100%;
 }
 
-.img_container img {
+.vegetable .img_container img,
+.vegetable label.img_container img {
     width: 75%;
     left: 50%;
     transform: translateX(-50%);
@@ -34,14 +39,27 @@
     position: absolute;
 }
 
+.gallery_container > input:checked + .img_container  {
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255,0.5);
+    z-index: 1;
+    top: 0;
+    left: 0;
+}
+
+/* Full cards */
 .description {
     display:none;
     height: 150%;
     position: absolute;
     background:#f3f3f3;
-    margin: auto;
     overflow: auto;
-    box-shadow:0 10px 10px rgba(0,0,0,0.6);
+    box-shadow:0 10px 10px rgba(0,0,0,0.3);
+    z-index: 1;
+    transform: translateX(-5%);
 }
 
 .desc_text {
@@ -53,18 +71,15 @@
 .vegetable:hover > .description {
     display:block;
     position:absolute;
-    top:1%;
-    width: 110%;
+    top:5%;
+    width: 115%;
 }
 
 .vegetable:hover > .img_container > img {
     display:none;
 }
 
-.vegetable:hover ~ .vegetable {
-    z-index: -1;
-}
-
+/* Tape offset */
 input {
     display: none;
 }
@@ -76,6 +91,7 @@ input[id="r2"]:checked ~ .container_vegetables {
 input[id="r3"]:checked ~ .container_vegetables {
     transform: translateX(-150%);
 }
+/* End */
 
 .scroll_container {
     width: max-content;
@@ -91,6 +107,37 @@ input[id="r3"]:checked ~ .container_vegetables {
     font: bold 1em "Space Mono", monospace;
 }
 
+/* Modal window */
+.gallery_container > input:checked + .img_container img {
+    display: block;
+    position: absolute;
+    width: 30%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 4% auto;
+}
+
+.gallery_container > input:not(:checked) + .img_container {
+    display: none;
+}
+
+.gallery_container > input[type="checkbox"]:checked {
+    display: block;
+    position: fixed;
+    top:0;
+    right: 0;
+    z-index: 2;
+}
+/* End modal window */
+
 label {
     cursor: pointer;
+}
+
+header {
+    font: bold 4em "Space Mono", monospace;
+    letter-spacing: 4px;
+    text-align: center;
+    text-transform: uppercase;
 }
