[product_galery] fix Display images [murrket_showcase] Arrange cat cards by template

--- a/online_stores_and_the_like/product_gallery/index.css
+++ b/online_stores_and_the_like/product_gallery/index.css
@@ -32,22 +32,14 @@
 
 .vegetable .img_container img,
 .vegetable label.img_container img {
-    width: 75%;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 0;
     position: absolute;
-}
-
-.gallery_container > input:checked + .img_container  {
-    display: block;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255,255,255,0.5);
-    z-index: 1;
     top: 0;
+    bottom: 0;
     left: 0;
+    right: 0;
+    max-width: 75%;
+    max-height: 75%;
+    margin: auto;
 }
 
 /* Full cards */
@@ -108,14 +100,26 @@ input[id="r3"]:checked ~ .container_vegetables {
 }
 
 /* Modal window */
-.gallery_container > input:checked + .img_container img {
+.gallery_container > input:checked + .img_container  {
     display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255,0.5);
+    z-index: 1;
+    top: 0;
+    left: 0;
+}
+
+.gallery_container > input:checked + .img_container img {
     position: absolute;
-    width: 30%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 4% auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    max-width: 75%;
+    max-height: 75%;
+    margin: auto;
 }
 
 .gallery_container > input:not(:checked) + .img_container {
