--- a/online_stores_and_the_like/murrket_showcase/index.css
+++ b/online_stores_and_the_like/murrket_showcase/index.css
@@ -10,8 +10,23 @@ header {
 }
 
 .breed_cats {
+    display: flex;
+    flex-direction: column;
     width: 20%;
     background: #d0d0d0;
+}
+
+.breed_cats > label {
+    display: flex;
+    align-items: center;
+    height: 3%;
+    font: 1em "Space Mono", monospace;
+    justify-content: center
+}
+
+.breed_cats > label:hover {
+    color: #d0d0d0;
+    background: #444444;
 }
 
 .cards_cats {
@@ -95,4 +110,24 @@ header {
     font: bold 2em "Space Mono", monospace;
     color: #d0d0d0;
     margin: auto;
+}
+
+.content > input {
+    display: none;
+}
+
+input[id="Crazy"]:checked ~ .cards_cats > div:not(.Crazy) {
+    opacity: 0.5;
+}
+
+input[id="Mysterious"]:checked ~ .cards_cats > div:not(.Mysterious) {
+    opacity: 0.5;
+}
+
+input[id="Angry"]:checked ~ .cards_cats > div:not(.Angry) {
+    opacity: 0.5;
+}
+
+input[id="Stupid"]:checked ~ .cards_cats > div:not(.Stupid) {
+    opacity: 0.5;
 }
